# python-chinese-chess

./: .gitattributes  .gitignore  LICENSE  README.md  fen  setup.cfg  test.py
cchess/: __init__.py  engine.py  svg.py
cchess/resources/: board.html
html/: cg245.html
pgn/: cg245.pgn  cg300.pgn
