[metadata]
name = cchess
version = 0.1.0
description = A simple Chinese chess library written in python
author = windshadow233
author_email = fyz666@mail.ustc.edu.cn
url = https://github.com/windshadow233/python-chinese-chess
download_url = https://github.com/windshadow233/python-chinese-chess
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Games/Entertainment :: Board Games
    Topic :: Games/Entertainment :: Turn Based Strategy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = True

[options.packages.find]
exclude =
    html
    images
    pgn
